# software3

sof/software3/: README.md
sof/software3/sof/software3/sof_cv/: CMakeLists.txt
sof/software3/sof/software3/sof_cv/src/: sof.cpp
sof/software3/sof_cv/: CMakeLists.txt  ソフトウェア演習3.textClipping
sof/software3/sof_cv/src/: sam.cpp  sof.cpp
